--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 
-group = 'github.kevcube.betterauthreactnativepasskey'
+group = 'com.lobehub.betterauthreactnativepasskey'
 version = '0.1.0'
 
 def expoModulesCorePlugin = new File(project(":expo-modules-core").projectDir.absolutePath, "ExpoModulesCorePlugin.gradle")
@@ -32,7 +32,7 @@ if (useManagedAndroidSdkVersions) {
 }
 
 android {
-  namespace "github.kevcube.betterauthreactnativepasskey"
+  namespace "com.lobehub.betterauthreactnativepasskey"
   defaultConfig {
     versionCode 1
     versionName "0.1.0"
