--- a/example/app.json
+++ b/example/app.json
@@ -15,7 +15,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "github.kevcube.betterauthreactnativepasskey.example",
+      "bundleIdentifier": "com.lobehub.betterauthreactnativepasskey.example",
       "associatedDomains": [
         "webcredentials:b74e92713a63.ngrok-free.app?mode=developer"
       ]
@@ -26,7 +26,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "github.kevcube.betterauthreactnativepasskey.example"
+      "package": "com.lobehub.betterauthreactnativepasskey.example"
     },
     "web": {
       "favicon": "./assets/favicon.png",
