--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "better-auth": "^1.3.10-beta.4",
     "expo": "54.0.6",
-    "expo-better-auth-passkey": "link:expo-better-auth-passkey",
+    "@lobehub/expo-better-auth-passkey": "link:expo-better-auth-passkey",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.12",
     "expo-linking": "~8.0.8",
