--- a/example/package.json
+++ b/example/package.json
@@ -9,9 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@better-auth/expo": "^1.3.7",
+    "@better-auth/expo": "^1.4.7",
+    "@better-auth/passkey": "^1.4.7",
     "@expo/metro-runtime": "~6.1.2",
-    "better-auth": "^1.3.10-beta.4",
+    "better-auth": "^1.4.7",
     "expo": "54.0.6",
     "@lobehub/expo-better-auth-passkey": "link:expo-better-auth-passkey",
     "expo-constants": "~18.0.9",
@@ -35,7 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@better-auth/cli": "^1.3.9",
+    "@better-auth/cli": "^1.4.7",
     "@types/pg": "^8.15.5",
     "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
