--- a/package.json
+++ b/package.json
@@ -38,17 +38,20 @@
     "expo-module.config.json"
   ],
   "devDependencies": {
+    "@simplewebauthn/browser": "^11.0.0",
     "@simplewebauthn/types": "*",
     "@types/react": "~19.1.10",
-    "better-auth": "^1.3.10-beta.4",
-    "expo": "54.0.6",
+    "better-auth": "^1.4.7",
+    "@better-auth/passkey": "^1.4.7",
+    "expo": "~54.0.6",
     "expo-module-scripts": "^4.1.10",
-    "react-native": "0.81.4"
+    "react-native": "0.81.5"
   },
   "peerDependencies": {
     "@better-fetch/fetch": "^1.1.18",
-    "better-auth": "^1.3.9",
-    "expo": "*",
+    "better-auth": "^1.4.0",
+    "@better-auth/passkey": "^1.4.0",
+    "expo": "~54.0.0",
     "react": "*",
     "react-native": "*",
     "nanostores": "*"
