--- a/example/package.json
+++ b/example/package.json
@@ -13,24 +13,24 @@
     "@better-auth/passkey": "^1.4.7",
     "@expo/metro-runtime": "~6.1.2",
     "better-auth": "^1.4.7",
-    "expo": "54.0.6",
-    "@lobehub/expo-better-auth-passkey": "link:expo-better-auth-passkey",
+    "expo": "~54.0.13",
+    "@lobehub/expo-better-auth-passkey": "link:..",
     "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.12",
+    "expo-dev-client": "~6.0.15",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.7",
+    "expo-router": "~6.0.12",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-web-browser": "~15.0.8",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-get-random-values": "~1.11.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native": "0.81.5",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
+    "react-native-web": "~0.21.1",
     "react-native-webview": "13.15.0",
     "react-native-webview-crypto": "^0.0.27"
   },
