chore: update dependency

--- a/example/package.json
+++ b/example/package.json
@@ -12,12 +12,13 @@
     "@better-auth/expo": "^1.4.7",
     "@better-auth/passkey": "^1.4.7",
     "@expo/metro-runtime": "~6.1.2",
+    "@lobehub/expo-better-auth-passkey": "link:..",
     "better-auth": "^1.4.7",
     "expo": "~54.0.13",
-    "@lobehub/expo-better-auth-passkey": "link:..",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.15",
     "expo-linking": "~8.0.8",
+    "expo-network": "~8.0.8",
     "expo-router": "~6.0.12",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
