--- a/package.json
+++ b/package.json
@@ -43,11 +43,9 @@
     "expo-module.config.json"
   ],
   "devDependencies": {
-    "@better-auth/passkey": "1.4.6",
-    "@simplewebauthn/browser": "^11.0.0",
+    "typescript": "^5.9.3",
     "@simplewebauthn/types": "*",
     "@types/react": "~19.1.10",
-    "better-auth": "1.4.6",
     "expo": "~54.0.6",
     "expo-module-scripts": "^4.1.10",
     "react-native": "0.81.5"
@@ -57,8 +55,13 @@
     "@better-fetch/fetch": "^1.1.18",
     "better-auth": "^1.4.0",
     "expo": "~54.0.0",
-    "nanostores": "*",
     "react": "*",
     "react-native": "*"
+  },
+  "dependencies": {
+    "@better-auth/passkey": "1.4.6",
+    "@simplewebauthn/browser": "^11.0.0",
+    "better-auth": "1.4.6",
+    "nanostores": "*"
   }
 }
